--- a/src/bib.bib
+++ b/src/bib.bib
@@ -4332,26 +4332,24 @@ doi = {10.1175/1520-0493(1997)125<2293:ROTBSC>2.0.CO;2},
   DOI = 	 {10.1007/978-3-642-11640-7_8}
 }
 
-@Inbook{JW2010LNCSE,
+@Article{JW2010LNCSE,
 author="Jablonowski, Christiane and Williamson, David L.",
-editor="Lauritzen, Peter Hjort and Jablonowski, Christiane and Taylor, Mark and Nair, Ramachandran",
-chapter="The Pros and Cons of Diffusion, Filters and Fixers in Atmospheric General Circulation Models",
-bookTitle="Numerical Techniques for Global Atmospheric Models",
-year="2011",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="381--493",
-doi="10.1007/978-3-642-11640-7_13",
-url="https://doi.org/10.1007/978-3-642-11640-7_13"
+  title = 	 {The Pros and Cons of Diffusion, Filters and Fixers in Atmospheric General Circulation Models, in: {P}.{H}. {L}auritzen, {R}.{D}. {N}air, {C}. {J}ablonowski, {M}. {T}aylor ({E}ds.), {N}umerical Techniques for Global Atmospheric Models},
+  journal = 	 {Lecture Notes in Computational Science and Engineering, {S}pringer},
+  year = 	 {2011},
+  OPTkey = 	 {},
+  volume = 	 {80},
+  OPTnumber = 	 {},
+  pages="381--493",
+  doi="10.1007/978-3-642-11640-7_13"
+  url="https://doi.org/10.1007/978-3-642-11640-7_13"
 }
-
-
 
 
 @Article{T2011LNCSEb,
   author = 	 {Mark A. Taylor},
   title = 	 {Conservation of Mass and Energy for the Moist Atmospheric Primitive Equations on Unstructured Grids, in: {P}.{H}. {L}auritzen, {R}.{D}. {N}air, {C}. {J}ablonowski, {M}. {T}aylor ({E}ds.), {N}umerical Techniques for Global Atmospheric Models},
-  journal = 	 {Lecture Notes in Computational Science and Engineering, {S}pringer, 2010, in press.},
+  journal = 	 {Lecture Notes in Computational Science and Engineering, {S}pringer},
   year = 	 {2011},
   OPTkey = 	 {},
   volume = 	 {80},
@@ -8035,16 +8033,19 @@ pages={3610-3624},
 }
 
 
-@Inbook{B2000S,
+@Article{B2000S,
 author = {B.A. Boville},
-editor = {P. Mote and A. O'Neill},
-chapter = {Toward a complete model of the climate system in {N}umerical {M}odeling of the {G}lobal {A}tmosphere in the {C}limate {S}ystem},
-bookTitle = {Numerical Modeling of the Global Atmosphere in the Climate System},
-year = {2000},
-publisher = {Springer Netherlands},
-pages = {419-442}
+  title = 	 {Toward a complete model of the climate system in {N}umerical {M}odeling of the {G}lobal {A}tmosphere in the {C}limate {S}ystem}, in: P. Mote and A. O'Neill ({E}ds.), Numerical Modeling of the Global Atmosphere in the Climate System},
+  journal = 	 {Numerical Modeling of the Global Atmosphere in the Climate System},
+  year = 	 {2000},
+  OPTkey = 	 {},
+  OPTnumber = 	 {},
+  OPTmonth = 	 {},
+  OPTnote = 	 { },
+  publisher = {Springer Netherlands},
+  pages = {419-442}
+  DOI = 	 {10.1007/978-3-642-11640-7_12}
 }
-
 
 @article{HetAl2018MWR,
 title={Physics-dynamics coupling with element-based high-order {G}alerkin methods: quasi equal-area physics grid},
