--- a/src/energy.tex
+++ b/src/energy.tex
@@ -212,7 +212,7 @@ In coupled climate modeling with prognostic atmosphere, ocean, land, land-ice, a
 
 The atmospheric equations of motion conserve TE but the discretizations used in climate and weather models are usually not inherently TE conservative. Exact conservation is probably not necessary but conservation to within $\sim $0.01  $W/m^2$ has been considered sufficient to avoid spurious trends in century long simulations \citep{B2000S,WOHTTV2015JAMES}. Spurious sources and sinks of TE can be introduced by the dynamical core, physics, physics-dynamics coupling as well as discrepancies between the TE of the continuous and discrete equations of motion and for the physics. Hence the study of TE conservation in comprehensive models of the atmosphere quickly becomes a quite complex and detailed matter. In addition there can easily be compensating errors in the system as a whole.
 
-Here we focus on versions of the Community Atmosphere Model (CAM) that use the spectral-element \citep[SE, ][]{LetAl2018JAMES} and finite-volume \citep[FV, ][]{L2004MWR} dynamical cores. These dynamical cores couple with physics in a time-split manner, i.e. physics receives a state updated by dynamics \citep[see ][ for a discussion of time-split versus process split physics-dynamics coupling in the context of CAM]{W2002MWR}. In its pure time-split form the physics tendencies are added to the state previously produced by the dynamical core and the resulting state provides the initial state for the subsequent dynamical core calculation. We refer to this as {\em{state-updating}} ({\tt{ftype=1}} in CAM code). Alternatively, when the dynamical core adopts a shorter time step than the physics, say {\tt{nsplit}} sub-steps, then (1/{\tt{nsplit}})th of the physics-calculated tendency is added to the state before each dynamics sub-step. We refer to this modification of time-splitting as {\em{dribbling}} ({\tt{ftype=0}}). CAM-FV uses the {\em{state-update}} ({\tt{ftype=1}}) approach while CAM-SE has options to use {\em{state-update}} ({\tt{ftype=1}}), {\em{dribbling}} ({\tt{ftype=0}}) or a combination of the two i.e. mass-variables use {\em{state-updating}} and remaining variables use {\em{dribbling}}. We refer to this as {\em{combination}} ({\tt{ftype=2}}). The {\em{dribbling}} variants can lead to spurious sources or sinks of TE (and mass) referred to here as physics-dynamics coupling errors.
+Here we focus on versions of the Community Atmosphere Model (CAM) that use the spectral-element \citep[SE, ][]{LetAl2018JAMES} and finite-volume \citep[FV, ][]{L2004MWR} dynamical cores. These dynamical cores couple with physics in a time-split manner, i.e. physics receives a state updated by dynamics \citep[see ][ for a discussion of time-split versus process split physics-dynamics coupling in the context of CAM]{W2002MWR}. In its pure time-split form the physics tendencies are added to the state previously produced by the dynamical core and the resulting state provides the initial state for the subsequent dynamical core calculation. We refer to this as {\em{state-updating}} ({\tt{ftype=1}} in CAM code). Alternatively, when the dynamical core adopts a shorter time step than the physics, say {\tt{nsplit}} sub-steps, then (1/{\tt{nsplit}})th of the physics-calculated tendency is added to the state before each dynamics sub-step. We refer to this modification of time-splitting as {\em{dribbling}} ({\tt{ftype=0}}). CAM-FV uses the {\em{state-update}} ({\tt{ftype=1}}) approach while CAM-SE has options to use {\em{state-update}} ({\tt{ftype=1}}), {\em{dribbling}} ({\tt{ftype=0}}) or a combination of the two i.e. mass-variables use {\em{state-updating}} and remaining variables use {\em{dribbling}}. We refer to this as {\em{combination}} ({\tt{ftype=2}}). The {\em{dribbling}} variants can lead to spurious sources or sinks of TE (and mass) referred to here as physics-dynamics coupling errors. {\color{red}{Any error in the water mass-budget affects the mass-weightening in the TE integral and hence introduces TE errors.}}
 
 The dynamical core usually has inherent or specified filters to control spurious noise near the grid scale which will lead to energy dissipation \citep{T2008JCP,JW2010LNCSE}. Similarly models often have sponge layers to control the solution near the top of the model that may be a sink of TE. There are examples of numerical discretizations of the adiabatic frictionless equations motion that are designed so that TE is conserved in the absence of time-truncation and filtering errors \citep[e.g., ][]{ER2017GMD,MC2013QJRMS}, e.g., mimetic spectral-element discretizations such as the one used in the horizontal in CAM-SE \citep{T2011LNCSEb}. These provide consistency between the discrete momentum and thermodynamic equations leading to global conservation associated with the conversion of potential to kinetic energy. In spectral transform models it is customary to add the energy change due to explicit diffusion on momentum back as heating (referred to as frictional heating), so that the diffusion of momentum does not affect the TE budget \citep[see, e.g., p.71 in ][]{CAM5}. This is also done in CAM-SE \citep{LetAl2018JAMES}. 
 
@@ -250,7 +250,7 @@ where $\rho^{(d)}$ is the mass of dry air per unit volume of moist air and $\rho
 \begin{equation}
 \mathcal{L}_{all}=\left\{ `d`,`wv`,`cl`,`ci`,`rn`,`sw`\right\},
 \end{equation}
-Define associated heat capacities at constant pressure $c_p^{(\ell)}$. {\color{red}{We refer to condensates as being {\em{thermodynamically and inertially active}} if they are included in the thermodynamic equation and momentum equations. E.g. if the thermodynamic equation is formulated in terms of temperature the energy conversion term includes a generalized heat capacity which is a function of the condensates and their associated heat capacities \citep[see, e.g., section 2.3 in ][]{LetAl2018JAMES}. Similarly the weight of the condensates is included in the pressure field and pressure gradient force.}}  How many and which condensates are thermodynamically{\color{red}{/inertially}} active in the dynamical core is controlled with namelist {\tt{qsize\_condensate\_loading}}. If {\tt{qsize\_condensate\_loading=1}} only water vapor ('$wv$') is active, {\tt{qsize\_condensate\_loading=3}} `$wv$`,`$cl$`, and`$ci$` are active, and if {\tt{qsize\_condensate\_loading=5}} then `$wv$`,`$cl$`,`$ci$`,`$rn$`, and `$sw$` are included.
+Define associated heat capacities at constant pressure $c_p^{(\ell)}$. {\color{red}{We refer to condensates as being {\em{thermodynamically and inertially active}} if they are included in the thermodynamic equation and momentum equations; e.g. if the thermodynamic equation is formulated in terms of temperature the energy conversion term includes a generalized heat capacity which is a function of the condensates and their associated heat capacities \citep[see, e.g., section 2.3 in ][]{LetAl2018JAMES}. Similarly the weight of the condensates is included in the pressure field and pressure gradient force.}}  How many and which condensates are thermodynamically{\color{red}{/inertially}} active in the dynamical core is controlled with namelist {\tt{qsize\_condensate\_loading}}. If {\tt{qsize\_condensate\_loading=1}} only water vapor ('$wv$') is active, {\tt{qsize\_condensate\_loading=3}} `$wv$`,`$cl$`, and`$ci$` are active, and if {\tt{qsize\_condensate\_loading=5}} then `$wv$`,`$cl$`,`$ci$`,`$rn$`, and `$sw$` are included.
 
 Using the $\eta^{(d)}$ vertical coordinate and dry mixing ratios the TE (per unit area) that the frictionless adiabatic equations of motion in the CAM-SE dynamical core conserves is
 \begin{equation}
@@ -263,17 +263,17 @@ In the CAM physical parameterizations a different definition of TE is used. Due 
 \label{eq:Ephys}
 \gi{E}_{phys} =\frac{1}{\Delta \mathcal{S}}\int_{\eta=0}^{\eta=1} \iint_\mathcal{S} \left( \frac{1}{g}\frac{\partial M^{(d)}}{\partial \eta^{(d)}} \right)\left(1+m^{(wv)}\right)\left[ \left(K+c_p^{(d)}T+\Phi_s\right)\right]dA d \eta^{(d)}.
 \end{equation}
-We note that earlier versions of CAM using the spectral transform dynamical core used $c_p$ of moist air. The adiabatic, frictionless equations of motion in the CAM-SE dynamical core can be made consistent with $E_{phys}$ by not including condensates in the mass/pressure field as well as energy conversion term in the thermodynamic equation and setting the heat capacity for moisture to $c_p^{(d)}$ \citep{T2011LNCSEb}. We refer to this version of CAM-SE {color{red}{combined with {\em{state-updating}} ({\tt{ftype=1}} physics-dynamics coupling}} as the {\em{energy consistent}} version {\color{red}{; i.e. the same continuous formula for energy is used in both dynamics and physics, and there are no physics-dynamics coupling errors}}.
+We note that earlier versions of CAM using the spectral transform dynamical core used $c_p$ of moist air. The adiabatic, frictionless equations of motion in the CAM-SE dynamical core can be made consistent with $E_{phys}$ by not including condensates in the mass/pressure field as well as energy conversion term in the thermodynamic equation and setting the heat capacity for moisture to $c_p^{(d)}$ \citep{T2011LNCSEb}. We refer to this version of CAM-SE {\color{red}{combined with {\em{state-updating}} ({\tt{ftype=1}} physics-dynamics coupling}} as the {\em{energy consistent}} version; i.e. the same continuous formula for energy is used in both dynamics and physics, and there are no physics-dynamics coupling errors}.
 
 \subsection{{\color{red}{Some remarks on local energy conservation}}}
-{\color{red}{Although this paper focuses on global TE errors, it is important to note that energy errors occur locally. For example, whenever an air parcel containing water undergoes a phase change (in the parameterizations) its temperature and enthalpy (energy) should change but its mass should not. When the air parcel gains or loses water via sedimentation or precipitation (or via a fixer or borrower to maintain some physical property like positive definiteness), then it has implications for the mass and heat content, and heat capacity of the parcel. In turn, that affects the energy and mass of the column and thereby affects the global TE budget. So anything that changes these state variables locally has implications for the TE budget. 
+{\color{red}{Although this paper focuses on global average TE errors, it is important to note that energy errors occur locally. For example, when an air parcel gains or loses water via evaporation or precipitation (or via a fixer or borrower to maintain some physical property like positive definiteness), there are implications for the mass and heat content, and heat capacity of the parcel. In turn, that affects the energy and mass of the column and thereby affects the global TE budget. So anything that changes these state variables locally has implications for the TE budget. 
 
-An example of an inconsistency in CAM physics is that surface pressure is held fixed during physical parameterization updates but water vapor, and hence surface pressure, does change during sedimentation/precipitation and an inconsistency appears in the mass and energy budget (see item 2 in Section \ref{subsec:spuriousE}). Similarly, if a `clipper' is used on water vapor or condensates to avoid (unphysical) negative mixing ratios (more details in section \ref{se:pdc_problem}) and this is not accounted for in the thermodynamics or through a surface flux, that `clipping' will produce an energy source. In the dynamical core TE is not conserved locally in each column as there is a horizontal flux of energy between columns; but the local energy budget should, ideally, be closed and thereby globally TE should be conserved. If a dynamical core does not inherently conserve dry air mass and/or water mass then a spurious source of TE is inevitable (unless fixers are applied).}} 
+An example of an inconsistency in CAM physics is that surface pressure is held fixed during physical parameterization updates but water vapor, and hence surface pressure, does change during evaporation/precipitation and an inconsistency appears in the mass and energy budget (see item 2 in Section \ref{subsec:spuriousE}). Similarly, if a `clipper' is used on water vapor or condensates to avoid (unphysical) negative mixing ratios (more details in section \ref{se:pdc_problem}) and this is not accounted for in the thermodynamics or through a surface flux, that `clipping' will produce an energy source via the mass-weightening in the TE vertical integral. In the dynamical core TE is not conserved locally in each column as there is a horizontal flux of energy between columns; but the local energy budget should, ideally, be closed and thereby globally TE should be conserved. If a dynamical core does not inherently conserve dry air mass and/or water mass then a spurious source of TE is inevitable again trhough the mass-weightening in the vertical integral (unless fixers are applied).}} 
                
 \subsection{Spurious energy sources and sinks}\label{subsec:spuriousE}
 In a weather/climate model TE conservation errors can appear in many places throughout the algorithm. Below is a general list of where conservation errors can appear with specific examples from CAM:
 \begin{enumerate}
-\item {\em{Parameterization errors}}: Individual parameterizations may not have a closed energy budget {\color{red}{; for example, they may not have been designed to conserve TE or they may conserve a different TE}}. CAM parameterizations are required to have a closed energy budget under the assumption that pressure remains constant during the computation of the subgrid-scale parameterization tendencies. In other words, the TE change in the column is exactly balanced by the net sources/sinks given by the fluxes through the column. 
+\item {\em{Parameterization errors}}: Individual parameterizations may not have a closed energy budget {\color{red}{; for example, they may not have been designed to conserve TE as defined in the model or they may conserve a TE defined differently}}. CAM parameterizations are required to have a closed energy budget {\color{red}{(based on the discrete TE definition in CAM)}} under the assumption that pressure remains constant during the computation of the subgrid-scale parameterization tendencies. In other words, the TE change in the column is exactly balanced by the net sources/sinks given by the fluxes through the column. {\footnote{{\color{red}{If not, a fixer needs to ba applied since the CAM global fixer as implemented does not include any errors from the parameterizations. For example, in CAM parameterizations occasionally produce negative water vapor. Tese are filled without compensation and therefore affect the TE.}} }}
 \item {\em{Pressure work {\color{red}{error}}}}: That said, if parameterizations update specific humidity then the surface pressure changes (e.g., moisture entering or leaving the column). In that case the pressure changes which, in turn, changes TE. This is referred to as {\em{pressure work {\color{red}{error}}}} \citep[section 3.1.8 in ][]{CAM5}.
 \item {\em{Continuous TE formula discrepancy}}:  If the continuous equations of motion for the dynamical core conserve a TE different from the one used in the parameterizations then an energy inconsistency is present in the system as a whole. This is the case with the new version of CAM-SE that conserves a TE that is more accurate and comprehensive than that used in the CAM physics package as discussed above. As also noted above, this mismatch arose from the evolutionary nature of the model development and not by deliberate design; and should be eliminated in the future.
 \item {\em{Dynamical core errors}}: Energy conservation errors in the dynamical core, not related to physics-dynamics coupling errors, can arise in multiple parts of the algorithms used to solve the equations of motion. For dynamical cores employing filtering \citep[e.g., limiters in flux operators ][]{L2004MWR} and/or possessing inherent damping which controls small scales, it is hard to isolate their energy dissipation from other errors in the discretization. If a hyperviscosity term or some other diffusion is added to the momentum equation, then one can diagnose the local energy dissipation from such damping and add a corresponding heating to balance it (frictional heating). There may also be energy loss from viscosity applied to other variables such a temperature or pressure which is harder to compensate. Here is a beak-down relevant to CAM-SE using a floating Lagrangian vertical coordinate:
@@ -296,7 +296,7 @@ In a weather/climate model TE conservation errors can appear in many places thro
 
 {\em{Kinetic energy `dribbling' error}}: Similarly, PDC errors in velocity component forcing increments $(\Delta u, \Delta v)$ occur because the dry kinetic energy change of $\Delta M^{(d)}\left[ \left( \Delta u\right)^2+\left( \Delta v\right)^2\right]$ will not match the equivalent dry kinetic energy change when `dribbling' velocity component forcing increments $(\Delta u, \Delta v)$. It is less clear how to eliminate this error as kinetic energy is a quadratic quantity.
 
-{\em{Mass `clipping' (affects all TE terms)}}: A similar PDC error for mass-variables such as vapor vapor forcing, cloud liquid, etc. can occur when the mass-tendencies are `dribbled' during the dynamical core integration. The dynamical core transport of mass variables will move mass around in the horizonal and vertical while the `dribbled' physics mass increments are applied in the same location; in that situation a negative mass-increment from the parameterizations may be larger than the mass available to remove. This can lead to a spurious source mass if there is logic in the dynamical core preventing mixing ratios/mass to become negative. This is referred to as `clipping' PDC errors and preocess is described/discussed in detail in Section \ref{sec:noise}. The `clipping' change the water mass budget without accounting for it in water fluxes or in the thermodynamics and hence lead to a TE conservation errors (both kinetic and thermal energy). }}
+{\em{Mass `clipping' (affects all TE terms)}}: A similar PDC error for mass-variables such as vapor vapor forcing, cloud liquid, etc. can occur when the mass-tendencies are `dribbled' during the dynamical core integration. The dynamical core transport of mass variables will move mass around in the horizonal and vertical while the `dribbled' physics mass increments are applied in the same location; in that situation a negative mass-increment from the parameterizations may be larger than the mass available to remove. This can lead to a spurious source mass if there is logic in the dynamical core preventing mixing ratios/mass to become negative. This is referred to as `clipping' PDC errors and preocess is described/discussed in detail in Section \ref{sec:noise}. The `clipping' changes the water mass budget without accounting for it in water fluxes or in the thermodynamics and hence lead to a TE conservation errors (both kinetic and thermal energy). }}
 \item {\em{Change of vertical grid/coordinate errors}}: If the vertical coordinates in physics and in the dynamical core are different then there can be spurious PDC energy errors even when using the state-update method for adding tendencies to the dynamical core state. For example, many non-hydrostatic dynamical cores \citep[e.g.][]{MPASatm} use a terrain-following height coordinate whereas physics uses pressure.
 \item {\em{Change of horizontal grid errors:}} If the physics tendencies are computed on a different horizontal grid than the dynamical core then there can be spurious energy errors from mapping tendencies and/or variables between horizontal grids \citep[e.g., ][]{HetAl2018MWR}. 
 \end{itemize}
@@ -370,7 +370,7 @@ which, in CAM-SE, includes a frictional heating term from viscosity on momentum
 \begin{equation}
 \partial \gi{E}_{dyn}^{({fheat})}=\frac{\gi{E}_{dAH}-\gi{E}_{dCH}}{\Delta t_{hvis}},
 \end{equation}
-where $\Delta t_{hvis}=\frac{\Delta t_{phys}}{{\tt{nsplit}}\times {\tt{rsplit}} \times hypervis\_subcycle}$ is the time step of the sub-stepped viscosity. {\color{red}{Since the viscosity on momentum is compensated for via heating (frictional heating) $\partial \gi{E}_{dyn}^{({hvis})}$ `only' has contributions from viscosity on temperature and pressure-level thickness. In terms of TE conservation it would be beneficial if hyperviscosity on temperature and mass could be avoided. However, the hyperviscosity on mass and temperature is necessary to keep the model stable.}}
+where $\Delta t_{hvis}=\frac{\Delta t_{phys}}{{\tt{nsplit}}\times {\tt{rsplit}} \times hypervis\_subcycle}$ is the time step of the sub-stepped viscosity. {\color{red}{Since the viscosity on momentum is compensated for via heating (frictional heating) $\partial \gi{E}_{dyn}^{({hvis})}$ `only' has contributions from viscosity on temperature and pressure-level thickness. In terms of TE conservation it would be beneficial if hyperviscosity on temperature and mass could be avoided. However, the hyperviscosity on mass and temperature is necessary to keep this model stable.}}
 
 The residual
 \begin{equation}
@@ -481,15 +481,15 @@ Various configurations are used and referred to in terms of the $COMPSET$ (Compo
 \item {\em{TE consistent}}: The TE consistent version uses {\em{state update}} physics-dynamics coupling ({\tt{ftype 1}}) described in section \ref{sec:consistent} {\color{red}{(this configuration does not have PDC errors and it has the same TE definition in physics and dynamics; and hence the energetically most consistent setup in terms of least number TE error terms)}},
 \item {\em{`dribbling' A}}: as {\em{TE consistent}} but with {\em{dribbling}} physics-dynamics coupling ({\tt{ftype 0}}) (section \ref{se:pdc_problem}{\color{red}{; this setup is used to assess PDC errors)}},
 \item {\em{`dribbling' B}}: as {\em{TE consistent}} but with  {\em{dribbling}} combination physics-dynamics coupling ({\tt{ftype 2}}) (section \ref{se:pdc_problem}{\color{red}{; this setup is used to assess PDC errors)}},
-\item {\em{vert limiter}}: as {\em{TE consistent}} but using limiters in the vertical remapping of momentum (section \ref{sec:ppm}{\color{red}{; experiment used to assess TE errors associated with shape-preserving limiters in vertical remapping}}),
-\item {\em{smooth topo}}: as {\em{TE consistent}} but  using smoother topography (see section \ref{sec:topo}{\color{red}{; experiment used to assess TE sensitivity to surface roughness}}),
-\item {\em{energy discr}}: The version with energy discrepancy (but no physics-dynamics coupling errors) described in section \ref{sec:ediscr} {\color{red}{(experiment used to estimate energy discrepancy errors)}},
-\item {\em{default}}: as {\em{energy discr}} version but with {\tt{ftype=2}} which is the current default CAM-SE (section \ref{sec:ediscr}{\color{red}{; we assess this configuration as it is the default CAM-SE configuration}}),
-\item {\em{QPC6}}: A simplified aqua-planet setup based on the {\em{TE consistent}}, i.e an aqua-planet setup using CAM6 physics; an ocean covered planet in perpetual equinox, with fixed, zonally symmetric sea surface temperatures \citep{NH2000ASL,MWO2016JAMES} (section \ref{sec:QPC6}{\color{red}{; experiment use to assess TE errors in a simplified moist environment}}), 
-\item {\em{FSH94}}: Dry dynamical core configuration based on Held-Suarez forcing which relaxes temperature to a zonally symmetric equilibrium temperature profile and simple linear drag at the lower boundary \citep{HS1994BAMS} (section \ref{sec:FHS94}{\color{red}{; experiment used to assess if TE errors in one of the simplest climate test cases is representative of full model TE errors}}),. 
-\item {\em{FV}}: A configuration with the SE dynamical core replaced with the finite-volume core (section \ref{sec:cam-fv}{\color{red}{; experiment used to assess TE errors of a different dynamical core}}), and
+\item {\em{vert limiter}}: as {\em{TE consistent}} but using limiters in the vertical remapping of momentum (section \ref{sec:ppm}{\color{red}{; experiment is used to assess TE errors associated with shape-preserving limiters in vertical remapping}}),
+\item {\em{smooth topo}}: as {\em{TE consistent}} but  using smoother topography (see section \ref{sec:topo}{\color{red}{; experiment is used to assess TE sensitivity to surface roughness}}),
+\item {\em{energy discr}}: The version with energy discrepancy (but no physics-dynamics coupling errors) described in section \ref{sec:ediscr} {\color{red}{(experiment is used to estimate energy discrepancy errors)}},
+\item {\em{default}}: as {\em{energy discr}} version but with {\tt{ftype=2}} which is the current default CAM-SE (section \ref{sec:ediscr}{\color{red}{; we assess this configuration since it is the default CAM-SE configuration}}),
+\item {\em{QPC6}}: A simplified aqua-planet setup based on the {\em{TE consistent}}, i.e an aqua-planet setup using CAM6 physics; an ocean covered planet in perpetual equinox, with fixed, zonally symmetric sea surface temperatures \citep{NH2000ASL,MWO2016JAMES} (section \ref{sec:QPC6}{\color{red}{; experiment is used to assess TE errors in a simplified moist environment}}), 
+\item {\em{FSH94}}: Dry dynamical core configuration based on Held-Suarez forcing which relaxes temperature to a zonally symmetric equilibrium temperature profile and simple linear drag at the lower boundary \citep{HS1994BAMS} (section \ref{sec:FHS94}{\color{red}{; experiment is used to assess if TE errors in one of the simplest climate test cases is representative of full model TE errors}}), 
+\item {\em{FV}}: A configuration with the SE dynamical core replaced with the finite-volume core (section \ref{sec:cam-fv}{\color{red}{; experiment is used to assess TE errors of a different dynamical core}}), and
 \item {\em{CSLAM}}: The quasi equal-area physics grid configuration of CAM-SE based on the TE consistent setup (section \ref{sec:cslam}{\color{red}{; used to assess TE errors associated with separating the dynamics grid from the physics grid}})
-\item {\em{CSLAM default}}: Same as {\em{CSLAM}} configuration but with {\tt{ftype=2}} and all forms of water thermodynamically{\color{red}{/inertially}} active in the dynamical core {\color{red}{(setup evaluated since it is the default CAM-SE-CSLAM setup)}}.
+\item {\em{CSLAM default}}: Same as {\em{CSLAM}} configuration but with {\tt{ftype=2}} and all forms of water thermodynamically{\color{red}{/inertially}} active in the dynamical core {\color{red}{(setup is evaluated since it is the default CAM-SE-CSLAM setup)}}.
 \end{itemize}
 
 
@@ -557,7 +557,7 @@ The orange curve on Figure \ref{fig:ftype_schematic}a, b, d, and e is the initia
 
 The majority of the noise with {\em{state-update}} ({\tt{ftype=1}}) physics-dynamics coupling method comes from momentum sources/sinks and heating/cooling. A way to alleviate noise problems and, at the same time, close the tracer mass budgets (in physics-dynamics coupling) is to use {\em{state-update}} ({\tt{ftype=1}}) coupling for tracers and {\em{dribbling}} ({\tt{ftype=0}}) coupling for momentum and temperature (referred to as {\em{combination}}, {\tt{ftype=2}}). Figure \ref{fig:abs_dpsdt}c shows the noise diagnostic $|\frac{dp_s}{dt}|$ for {\em{combination}} ({\tt{ftype=2}}) coupling. Figure \ref{fig:abs_dpsdt}c looks very similar to Figure \ref{fig:abs_dpsdt}b but there is some noise near element boundaries. That said, in terms of vertical pressure velocities {\em{combination}} ({\tt{ftype=2}}) and {\em{dribbling}} ({\tt{ftype=0}}) climates are similar in terms of the level of noise (Figure \ref{fig:omega500}b and \ref{fig:omega500}c). The element noise in CAM-SE with {\em{combination}} ({\tt{ftype=2}}) seen in both $|\frac{dp_s}{dt}|$ and 500hPa pressure velocity can be `removed' by using CAM-SE-CSLAM (Figure \ref{fig:abs_dpsdt}d) which uses a quasi equal-area physics grid and CSLAM \cite[Conservative Semi-LAgrangian Multi-tracer; ][]{LNU2010JCP} consistently coupled to the SE method \citep{LTOUNGK2017MWR}. The noise patterns in vertical velocity off the western coast of South America are present in all CAM-SE simulations (and hence not related to physics-dynamics coupling algorithm) are also `removed' by using CAM-SE-CSLAM \citep{HetAl2018MWR}.
 \subsubsection{Spurious TE tendencies from physics-dynamics coupling}
-When using the same TE formula in the dynamical core and physics the spurious TE tendency from physics-dynamics coupling can be assessed. {\color{red}{As described in item \ref{item:pdc} (Section \ref{subsec:spuriousE}), PDC errors can be attributed to underlying pressure changes during the `dribbling' of temperature and velocity component increments as well as PDC `clipping' errors in the water variables (the process in which `clipping' occurs is described in detail in the previous subsection). The TE error associated with `clipping' PDC error occurs due to the mass-change prescribed by physics consistent with the fluxes in/out of the physics column does not equal the actual mass change applied to the dynamical core state due to `clipping'}}
+When using the same TE formula in the dynamical core and physics the spurious TE tendency from physics-dynamics coupling can be assessed. {\color{red}{As described in item \ref{item:pdc} (Section \ref{subsec:spuriousE}), PDC errors can be attributed to underlying pressure changes during the `dribbling' of temperature and velocity component increments as well as PDC `clipping' errors in the water variables (the process in which `clipping' occurs is described in detail in the previous subsection). The TE error associated with `clipping' PDC error occurs when the mass-change prescribed by physics that is consistent with the fluxes in/out of the physics column does not equal the actual mass change applied to the dynamical core state due to `clipping'}}
 
 {\color{red}{For {\tt{ftype=2}} PDC only the increment for temperature and momentum are {\em{dribbled}} whereas tracer mass is state-updated (no `clipping' errors). This results in a spurious PDC TE tendency of $\partial \gi{E}^{({pdc})}=-0.484 W/m^2$. When using {\tt{ftype=0}} PDC also tracer increments are  {\em{dribbled}} (hence there are `clipping' PDC errors) a similar TE tendency results $\partial \gi{E}^{({pdc})}=-0.469 W/m^2$. The difference between the TE PDC tenendency for {\tt{ftype=2}} and {\tt{ftype=0}} provides an estimate of the TE PDC `clipping' error. The `clipping' PDC TE tenendency is very small $~0.015 W/m^2$.}}
 
@@ -585,7 +585,7 @@ using \eqref{eq:budget_efix}. With {\em{state-updating}} ({\tt{ftype=1}}) (i.e. 
 
 {\color{red}{
 \subsubsection{2D structure of TE errors}
-Figure \ref{fig:2d_te} shows the two-dimensional spatial structure of column-integrated TE tendencies for for the {\em{default}} configuration. The first plot (Figure \ref{fig:2d_te}a) shows column integrated $\partial E^{(param)}$, i.e. the spatial structure of `physical' TE tendency. Only contours from $\pm 150W/m^2$are shown although the actual range (noted above color bar) is -148.3$W/m^2$ to 1770$W/m^2$. The larger positive values are only for a small number of grid points (e.g., mountains of New Guinea). The column-integrated dynamical core TE tendency  $\partial \gi{E}^{(adiab)}$ (Figure \ref{fig:2d_te}c) approximately balances $\partial E^{(param)}$. The TE pressure work error tendency $\partial E^{(pwork)}$ (Figure \ref{fig:2d_te}b) is, as expected, largest where precipitation and evaporation is largest. The last 3 plots show terms in the dynamical core budget: column-integrated TE tendency for hyperviscosity, $\partial \gi{E}^{(hvis)}$, vertical remapping, $\partial \gi{E}^{(remap)}$, and frictional heating, $\partial \gi{E}^{(fheat)}$. Compared to $\partial E^{(param)}$ the hyperviscosity tendencies $\partial \gi{E}^{(hvis)}$ are very large meaning that the frictionless adiabatic dynamical core creates very large TE tendencies (not shown) that are, to a large degree, compensated for by the hyperviscosity operators. Otherwise the total dynamical core TE tendencies would be equally large. The frictional heating TE tendency is largest over/near topography. Similarly for vertical remapping but, in addition, there are large TE tendencies in areas of large updrafts/downdrafts over ocean.
+Figure \ref{fig:2d_te} shows the two-dimensional spatial structure of column-integrated TE tendencies for for the {\em{default}} configuration. The first plot (Figure \ref{fig:2d_te}a) shows column integrated $\partial E^{(param)}$, i.e. the spatial structure of `physical' TE tendency. Only contours from $\pm 150W/m^2$are shown although the actual range (noted above color bar) is -148.3$W/m^2$ to 1770$W/m^2$. The larger positive values occur only at a small number of grid points (e.g., mountains of New Guinea). The column-integrated dynamical core TE tendency  $\partial \gi{E}^{(adiab)}$ (Figure \ref{fig:2d_te}c) approximately balances $\partial E^{(param)}$. The TE pressure work error tendency $\partial E^{(pwork)}$ (Figure \ref{fig:2d_te}b) is, as expected, largest where precipitation and evaporation is largest. The last 3 plots show terms in the dynamical core budget: column-integrated TE tendency for hyperviscosity [XXXXXXXXX fix fix fix fix], $\partial \gi{E}^{(hvis)}$, vertical remapping, $\partial \gi{E}^{(remap)}$, and frictional heating, $\partial \gi{E}^{(fheat)}$. Compared to $\partial E^{(param)}$ the hyperviscosity tendencies $\partial \gi{E}^{(hvis)}$ are very large meaning that the frictionless adiabatic dynamical core creates very large TE tendencies (not shown) that are, to a large degree, compensated for by the hyperviscosity operators. Otherwise the total dynamical core TE tendencies would be equally large. The frictional heating TE tendency is largest over/near topography. Similarly for vertical remapping but, in addition, there are large TE tendencies in areas of large updrafts/downdrafts over ocean.
 %
 \begin{figure}[h]
 % \centering
