--- a/src/energy.tex
+++ b/src/energy.tex
@@ -263,7 +263,7 @@ In the CAM physical parameterizations a different definition of TE is used. Due 
 \label{eq:Ephys}
 \gi{E}_{phys} =\frac{1}{\Delta \mathcal{S}}\int_{\eta=0}^{\eta=1} \iint_\mathcal{S} \left( \frac{1}{g}\frac{\partial M^{(d)}}{\partial \eta^{(d)}} \right)\left(1+m^{(wv)}\right)\left[ \left(K+c_p^{(d)}T+\Phi_s\right)\right]dA d \eta^{(d)}.
 \end{equation}
-We note that earlier versions of CAM using the spectral transform dynamical core used $c_p$ of moist air. The adiabatic, frictionless equations of motion in the CAM-SE dynamical core can be made consistent with $E_{phys}$ by not including condensates in the mass/pressure field as well as energy conversion term in the thermodynamic equation and setting the heat capacity for moisture to $c_p^{(d)}$ \citep{T2011LNCSEb}. We refer to this version of CAM-SE {\color{red}{combined with {\em{state-updating}} ({\tt{ftype=1}} physics-dynamics coupling}} as the {\em{energy consistent}} version; i.e. the same continuous formula for energy is used in both dynamics and physics, and there are no physics-dynamics coupling errors}.
+We note that earlier versions of CAM using the spectral transform dynamical core used $c_p$ of moist air. The adiabatic, frictionless equations of motion in the CAM-SE dynamical core can be made consistent with $E_{phys}$ by not including condensates in the mass/pressure field as well as energy conversion term in the thermodynamic equation and setting the heat capacity for moisture to $c_p^{(d)}$ \citep{T2011LNCSEb}. We refer to this version of CAM-SE {\color{red}{combined with {\em{state-updating}} ({\tt{ftype=1}} physics-dynamics coupling as the {\em{energy consistent}} version; i.e. the same continuous formula for energy is used in both dynamics and physics, and there are no physics-dynamics coupling errors}}.
 
 \subsection{{\color{red}{Some remarks on local energy conservation}}}
 {\color{red}{Although this paper focuses on global average TE errors, it is important to note that energy errors occur locally. For example, when an air parcel gains or loses water via evaporation or precipitation (or via a fixer or borrower to maintain some physical property like positive definiteness), there are implications for the mass and heat content, and heat capacity of the parcel. In turn, that affects the energy and mass of the column and thereby affects the global TE budget. So anything that changes these state variables locally has implications for the TE budget. 
